# tavern-plugin-template

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
tavern_<plugin>/: schema.yaml
tavern_plugin/: client.py  request.py  response.py  schema.yaml  tavernhook.py
